fix enterprise cluster build on JDK 17 + add upstream-JDK build job.